# rosa

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  RELEASE-CHECKLIST.md  TODO  TODO.md  build.sh  run.sh  start.sh
.github/workflows/: ci.yaml
doc/: book.toml
doc/src/: README.md  SUMMARY.md  config_guide.md  extensions.md  installation.md  internals.md  quickstart.md  status_screen.md  toolchain.md
doc/src/extensions/: clustering.md  distance_metrics.md  fuzzers.md  oracle.md
doc/src/installation/: building_from_source.md  using_docker.md
doc/src/quickstart/: analyzing_results.md  choosing_a_fuzzer.md  choosing_a_target.md  running_rosa.md  setup_docker.md  setup_rosa.md
doc/src/toolchain/: rosa.md  rosa_evaluate.md  rosa_explain.md  rosa_generate_config.md  rosa_showmap.md  rosa_simulate.md  rosa_trace_dist.md
examples/: Makefile
examples/sudo/: .gitignore  Makefile
examples/sudo/config/: sudo-backdoored.toml
fuzzers/aflpp/patches/: aflpp-qemuafl-build.patch
src/: clustering.rs  config.rs  criterion.rs  decision.rs  distance_metric.rs  error.rs  fuzzer.rs  lib.rs  logging.rs  main.rs  oracle.rs  trace.rs
src/cli/: common.rs  logging.rs  rosa.rs  rosa_evaluate.rs  rosa_explain.rs  rosa_generate_config.rs  rosa_showmap.rs  rosa_simulate.rs  rosa_trace_dist.rs  tui.rs
src/distance_metric/: hamming.rs
src/fuzzer/: aflpp.rs
src/oracle/: comp_min_max.rs
