[package]
name = "rosa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
ctrlc = "3.4.2"
derive_builder = "0.13.0"
libc = "0.2.153"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"


[[bin]]
name = "rosa"
path = "src/cli/rosa.rs"

[[bin]]
name = "rosa-evaluate"
path = "src/cli/rosa_evaluate.rs"
